# music-visualizer

./: CMakeLists.txt  README.md
src/: main.c
